1st inclass exercise

--- a/inclass-1/hello.html
+++ b/inclass-1/hello.html
@@ -5,9 +5,13 @@
 </head>
 <body>
 <p>Steven Dieffenbach</p>
-<!-- insert an image -->
-<p>Some text, like a story of last trip</p>
-<p>Links</p>
-<!-- text area with submit button -->
+<p><img src="https://scontent.fhou2-1.fna.fbcdn.net/v/t1.0-9/11695979_10208009388338831_4340737282653344634_n.jpg?oh=256ef9364b64a283aa4e65f8fbd2324f&oe=58DA03B8" alt="Image cannot be found." height=200 width=200></img></p>
+<p>The last trip I took was to San Francisco last semester
+for a job interview. It was the first time I visited California.
+The weather was nice, and the experience was pleasant.</p>
+<p><a href="https://github.com/srdieffenbach/comp431">Github for Class</a></p>
+<p><a href="http://www.rice.edu/">Rice University</a></p>
+<p><textarea rows="3" cols="35">Feel free to leave a comment.</textarea></p>
+<p><button type="button">Submit</button></p>
 </body>
 </html>
